--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "cloudinary": "^1.40.0",
     "cors": "^2.8.5",
